--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!--SLAJDER-->
     <div id="projekti"><h2>Projekti</h2></div>
     <div id="slajderDiv">
-        
+        <img src="img/slika1.jpg" alt="slikeProjekti" id="slikaSlajder">
         
 
     </div>
