--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="index.html"><img src="img/logo.png" alt="logo"/></a>
                 <a href="index.html"><h1>KPS</h1></a>
             </div>
-            <nav id="nav" class="col-lg-7  col-md-10 d-none d-lg-block my-auto">
+            <nav id="nav" class="col-lg-8  col-md-10 d-none d-lg-block my-auto">
                 
             </nav>
             <div id="hamburger" class="d-lg-none col-2 text-center my-auto">
@@ -42,9 +42,9 @@
     <!--SLAJDER-->
     <div id="projekti"><h2>Projekti</h2></div>
     <div id="slajderDiv">
-        <img src="img/slika1.jpg" alt="slikeProjekti" id="slikaSlajder">
-        
-
+        <div class="okvirSlike">
+            <img src="img/slika1.jpg" alt="Projekti" id="slikaSlajder" >
+        </div>
     </div>
 
     <script src="js/jquery-3.4.1.js"></script>
