--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <div class="container-fluid">
         <div id="navigacija" class="row">
-            <div id="logo"  class="col-lg-3 col-md-2 col-lg-offset-2">
+            <div id="logo"  class="col-lg-3 col-3 col-lg-offset-2">
                 <a href="index.html"><img src="img/logo.png" alt="logo"/></a>
                 <a href="index.html"><h1>KPS</h1></a>
             </div>
-            <nav id="nav" class="col-lg-8  col-md-10 d-none d-lg-block my-auto">
+            <nav id="nav" class="col-lg-8 d-none d-lg-block my-auto">
                 
             </nav>
             <div id="hamburger" class="d-lg-none col-2 text-center my-auto">
