--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title>KPS</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
+    
     <link rel="stylesheet" type="text/css" href="css/bootstrap-4.4.1-dist/css/bootstrap-grid.min.css"/>
     <link rel="stylesheet" href="css/style.css" type="text/css"/>
 </head>
 <body>
     <div class="container-fluid">
         <div id="navigacija" class="row">
-            <div id="logo"  class="col-lg-3 col-3 col-lg-offset-2">
+            <div id="logo"  class="col-lg-3 col-5 col-lg-offset-2">
                 <a href="index.html"><img src="img/logo.png" alt="logo"/></a>
                 <a href="index.html"><h1>KPS</h1></a>
             </div>
@@ -40,10 +41,23 @@
         </div>
     </div>
     <!--SLAJDER-->
-    <div id="projekti"><h2>Projekti</h2></div>
-    <div id="slajderDiv">
-        <div class="okvirSlike">
-            <img src="img/slika1.jpg" alt="Projekti" id="slikaSlajder" >
+    <div id="projektiCelina">
+        <div class="container">
+            <div class="row">
+                <div id="projekti" class="col-lg-6">
+                    <h2>Projekti</h2>
+                </div>
+                <div id="slajderDiv" class="col-lg-6">
+                    <div class="okvirSlike">
+                        <img src="img/slika1.jpg" alt="Projekti" id="slikaSlajder" >
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="projektiDiv" id="projektiSlike">
+        
+                </div>
+            </div>
         </div>
     </div>
 
