--- a/index.html
+++ b/index.html
@@ -53,10 +53,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="projektiDiv" id="projektiSlike">
-        
-                </div>
+            <div class="row" id="projektiSlike">
+                
             </div>
         </div>
     </div>
