--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="row">
                 <div id="slajderDiv" class="col-lg-6">
                     <div class="okvirSlike">
-                        <img src="img/slikaOnama.jpg" alt="O nama"/>
+                        <img src="img/slikaOnama1.jpg" alt="O nama"/>
                     </div>
                 </div>
                 <div id="onamaTekst" class="col-lg-6">
