--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="navigacija" class="row">
             <div id="logo"  class="col-lg-3 col-5 col-lg-offset-2">
                 <a href="index.html"><img src="img/logo.png" alt="logo"/></a>
-                <a href="index.html"><h1>KPS</h1></a>
+                <a href="index.html"><h2>KPS</h2></a>
             </div>
             <nav id="nav" class="col-lg-8 d-none d-lg-block my-auto">
                 
@@ -55,7 +55,7 @@
                 </div>
                 <div id="slajderDiv" class="col-lg-6">
                     <div class="okvirSlike">
-                        <img src="img/slika1.jpg" alt="Projekti" id="slikaSlajder" >
+                        <img src="img/slika1.jpg" alt="Projekti" id="slikaSlajder" />
                     </div>
                 </div>
             </div>
@@ -121,22 +121,7 @@
                     <p class="pb-4">pera@ict.edu.rs</p>
                 </div>
                 <div class="col-lg-6">
-                    <!-- <form>
-                        <div class="form-group">
-                          <label for="exampleInputEmail1">Email address</label>
-                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                        </div>
-                        <div class="form-group">
-                          <label for="exampleInputPassword1">Password</label>
-                          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                        </div>
-                        <div class="form-check">
-                          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                          <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                      </form> -->
+                    
                 </div>
             </div>
         </div>
