--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div class="container">
             <div class="row py-5">
                 <div class="col-lg-5 ">
-                    <img src="img/slikaProjekti5.jpg" alt="autor" class="slikaAutor pb-3"/>
+                    <img src="img/autor1.jpg" alt="autor" class="slikaAutor pb-3"/>
                     <h4>Milos Ljuboja 279/18</h4>
                 </div>
                 <div class="col-lg-7" id="tekstAutor">
