--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div id="projekti" class="col-lg-6">
                     <h2>Projekti</h2>
                 </div>
-                <div id="slajderDiv" class="col-lg-6">
+                <div id="slajderDiv" class="col-lg-6 col-12">
                     <div class="okvirSlike">
                         <img src="img/slika1.jpg" alt="Projekti" id="slikaSlajder" />
                     </div>
@@ -89,7 +89,7 @@
         </div>
         <div class="container" id="kontaktInfo">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6" id="kontaktBlok">
                     <h2 class="pb-3">Kontaktirajte nas</h2>
                     <p class="pb-5">Imate li nekih pitanja?</p>
                     <div class="row pb-3">
@@ -120,7 +120,7 @@
                     </div>
                     <p class="pb-4">pera@ict.edu.rs</p>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6" id="formaKontakt">
                     <h2>Pišite nam</h2>
                     <form action="#" mehtod="GET" name="forma" id="forma">
                         <table>
