--- a/index.html
+++ b/index.html
@@ -182,6 +182,8 @@
             <p class="py-4">Copyrigth &copy; 2020. All rights reserved</p>
         </div>
     </footer>
+    <div class="scrollToTop"><a href="#"><i class="fas fa-chevron-circle-up" id="strelicaGore"></i></a></div>
+    
 
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/main.js" type="text/javascript">
