--- a/index.html
+++ b/index.html
@@ -89,34 +89,34 @@
         -->
         </div> 
         <div class="container" id="kontaktInfo">
-            <div class="row">
-                <div class="col-lg-6" id="kontaktBlok">
-                    <h2 class="pb-3">Kontaktirajte nas</h2>
+            <div class="row col-12">
+                <div class="col-lg-6 col-sm-8 pr-0" id="kontaktBlok">
+                    <h2 class="pb-3 px-0 col-12">Kontaktirajte nas</h2>
                     <p class="pb-5">Imate li nekih pitanja?</p>
-                    <div class="row pb-3">
-                        <div class="col-lg-1 kontaktIkone">
+                    <div class="row pb-3 col-8">
+                        <div class="col-lg-1 col-6 kontaktIkone">
                             <i class="fas fa-map-pin"></i>
                         </div>
-                        <div class="col-lg-11">
+                        <div class="col-lg-11 kontaktNaslovi">
                             <h3>Adresa</h3>
                         </div>
                     </div>
                     <p class="pb-4">Zdravka Čelara 16,Beograd</p>
-                    <div class="row pb-3">
-                        <div class="col-lg-1 kontaktIkone">
+                    <div class="row pb-3 col-8">
+                        <div class="col-lg-1 col-6 kontaktIkone">
                             <i class="fas fa-phone"></i>
                         </div>
-                        <div class="col-lg-11">
+                        <div class="col-lg-11 kontaktNaslovi">
                             <h3>Telefon</h3>
                         </div>
                     </div>
                     <p class="pb-4">0612345678</p>
-                    <div class="row pb-3">
-                        <div class="col-lg-1 kontaktIkone">
+                    <div class="row pb-3 col-8">
+                        <div class="col-lg-1 col-6 kontaktIkone">
                             <i class="fas fa-envelope"></i>
                         </div>
                         <div class="col-lg-11 kontaktNaslovi">
-                            <h3 >Email</h3>
+                            <h3>Email</h3>
                         </div>
                     </div>
                     <p class="pb-4">pera@ict.edu.rs</p>
@@ -158,13 +158,13 @@
                                     <label>Poruka</label>
                                 </td>
                                 <td>
-                                    <textarea name="poruka" id="poruka" cols="31" rows="5" placeholder="Upišite poruku..."></textarea>
+                                    <textarea name="poruka" id="poruka" placeholder="Upišite poruku..."></textarea>
                                 </td>
                             </tr>
                             <tr>
-                                    <td colspan="2">
-                                        <input type="button" name="posalji" id="posalji" value="Pošalji" />
-                                    </td>
+                                <td colspan="2">
+                                    <input type="button" name="posalji" id="posalji" value="Pošalji" />
+                                </td>
                             </tr>
                         </table>
                    </form>
