--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="row">
                 <div id="projekti" class="col-lg-6">
                     <h2>Projekti</h2>
-                    <p>KPS je kao kompanija učestvovala u izgradnji brojnih konstrukcija širom sveta. Realizovali smo preko 50 projekata u 30 gradova na tri kontinenta - Evropi, Severnoj Americi i Australiji.</p><p> Najbitniji i najpoznatiji građevinski poduhvati naše kompanije su oni u Amsterdamu, Majamiju i Melburnu iako nijedan naš  projekat u bilo kom drugom gradu nije ništa manje kvalitetan i pouzdan.</p>
+                    <p>KPS je kao kompanija učestvovala u izgradnji brojnih konstrukcija širom sveta. Realizovali smo preko 70 projekata u 50 gradova na tri kontinenta - Evropi, Severnoj Americi i Australiji.</p><p> Najbitniji i najpoznatiji građevinski poduhvati naše kompanije su oni u Amsterdamu, Majamiju i Melburnu iako nijedan naš  projekat u bilo kom drugom gradu nije ništa manje kvalitetan i pouzdan.</p><p>Pored konstrukcija naša kompanija se bavi i reparacijama starih građevinskih objekata kao što je most Golden Gejt u San Francisku za čiju restauraciju su zaslužni naši radnici.</p>
                 </div>
                 <div class="slajderDiv col-lg-6 col-12">
                     <div class="okvirSlike">
@@ -76,7 +76,7 @@
                 </div>
                 <div id="onamaTekst" class="col-lg-6">
                     <h2>O nama</h2>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p><p> It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <p>Porodica Katić je 1934. godine emigrirala u SAD. <i>"Stigao sam sa ženom i dvoje dece u njujoršku luku, u džepu sam imao nešto ušteđevine i mnogo nade"</i> - priseća se Vukašin Katić. Dvadeset godina života u Sjedinjenim Američkim Državama i ubrzan ekonomski rast nakon Drugog Svetskog rata su dovoljno ohrabrili Vukašina da odluči da osnuje građevinsku firmu. </p><p>KPS (Kvalitet pouzdanost stabilnost) je osnovana 1952. godine za vreme ekonomskog buma u SAD. Prvobitno je uzimala projekte isključivo u Njujorku, a kako je rasla potražnja za građevisnkim kompanijama KPS je počela da radi u više gradova, a na kraju i na više kontinenata.</p><p>Danas, skoro 70 godina kasnije KPS je jedna od vodećih građevinskih kompanija u svetu.</p>
                      
                 </div>
             </div>
@@ -153,7 +153,7 @@
                 <div class="col-lg-7" id="tekstAutor">
                     <h2>O autoru</h2>
                     <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                        Student Visoke ICT škole. Sajt je rađen isključivo za potrebe predmeta WEB Programiranje 1.
                     </p>
                 </div>
             </div>
