--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div id="sredina">
         <div class="container">
             <div id="sredinaNaslov">
-                <h1>Dobrodošli na sajt kompanije KPS</h1>
+                <h1>Kvalitet pouzdanost stabilnost!</h1>
             </div>  
         </div>
         <div id="pokazivac">
@@ -49,8 +49,7 @@
         <div class="container">
             <div class="row">
                 <div id="projekti" class="col-lg-6">
-                    <h2>Projekti</h2>
-                    <p>KPS je kao kompanija učestvovala u izgradnji brojnih konstrukcija širom sveta. Realizovali smo preko 70 projekata u 50 gradova na tri kontinenta - Evropi, Severnoj Americi i Australiji.</p><p> Najbitniji i najpoznatiji građevinski poduhvati naše kompanije su oni u Amsterdamu, Majamiju i Melburnu iako nijedan naš  projekat u bilo kom drugom gradu nije ništa manje kvalitetan i pouzdan.</p><p>Pored konstrukcija naša kompanija se bavi i reparacijama starih građevinskih objekata kao što je most Golden Gejt u San Francisku za čiju restauraciju su zaslužni naši radnici.</p>
+                    <!--JS-->
                 </div>
                 <div class="slajderDiv col-lg-6 col-12">
                     <div class="okvirSlike">
@@ -69,15 +68,13 @@
     <div id="onama">
         <div class="container">
             <div class="row">
-                <div class="slajderDiv col-lg-6">
-                    <div class="okvirSlike">
-                        <img src="img/slikaOnama.jpg" alt="O nama"/>
+                <div class="slajderDiv col-lg-6" >
+                    <div class="okvirSlike" id="onamaSlika">
+                        <!--Ubacivanje iz js-->
                     </div>
                 </div>
                 <div id="onamaTekst" class="col-lg-6">
-                    <h2>O nama</h2>
-                    <p>Porodica Katić je 1934. godine emigrirala u SAD. <i>"Stigao sam sa ženom i dvoje dece u njujoršku luku, u džepu sam imao nešto ušteđevine i mnogo nade"</i> - priseća se Vukašin Katić. Dvadeset godina života u Sjedinjenim Američkim Državama i ubrzan ekonomski rast nakon Drugog Svetskog rata su dovoljno ohrabrili Vukašina da odluči da osnuje građevinsku firmu. </p><p>KPS (Kvalitet pouzdanost stabilnost) je osnovana 1952. godine za vreme ekonomskog buma u SAD. Prvobitno je uzimala projekte isključivo u Njujorku, a kako je rasla potražnja za građevisnkim kompanijama KPS je počela da radi u više gradova, a na kraju i na više kontinenata.</p><p>Danas, skoro 70 godina kasnije KPS je jedna od vodećih građevinskih kompanija u svetu.</p>
-                     
+                   
                 </div>
             </div>
         </div>
