--- a/index.html
+++ b/index.html
@@ -152,6 +152,11 @@
                     <p>
                         Student Visoke ICT škole. Sajt je rađen isključivo za potrebe predmeta WEB Programiranje 1.
                     </p>
+                    <a href="#"><i class="fas fa-sitemap mreze"></i></i></a>
+                    <a href="http://facebook.com"><i class="fab fa-facebook-square mreze"></i></a>
+                    <a href="http://instagram.com"><i class="fab fa-instagram mreze"></i></a>
+                    <a href="http://twitter.com"><i class="fab fa-twitter mreze"></i></a>
+                    <a href="#"><i class="fas fa-book mreze"></i></a>
                 </div>
             </div>
         </div>
